# Sankoff-Parallelization

./: CMakeLists.txt  README.md  run-commands.sh
src/: main.cpp  sankoff.cpp  sankoff.hpp
